refactored auth service, user controller, admin controller, and user service. Also added advice based exception handlers for user and admin